--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -23,21 +23,22 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
         -   [GDP concepts and language used in informal feedback for
             peers to influence modification of games (developing
-            community
-            norms)](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms)
-        -   [The propagation of use of GDPs - (through playtesting() IS
-            IT PLAYTESTING THAT IS IMPORTANT HERE - OR THE ROLE AND
-            NATURE OF GDPS TO AID
-            PROPAGATION](#the-propagation-of-use-of-gdps---through-playtesting-is-it-playtesting-that-is-important-here---or-the-role-and-nature-of-gdps-to-aid-propagation)
+            community norms) - MERGE WITH
+            BELOW?](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms---merge-with-below)
+        -   [Evolution and propagation of GDPs concepts during
+            playtesting - MERGE WITH
+            ABOVE?](#evolution-and-propagation-of-gdps-concepts-during-playtesting---merge-with-above)
         -   [GDPs facilitate the use of wider funds of knowledge /
             interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
         -   [Perhaps add here a summary of cultural section if
             useful](#perhaps-add-here-a-summary-of-cultural-section-if-useful)
     -   [GDPs used in the process of guided
         participation](#gdps-used-in-the-process-of-guided-participation)
-        -   [GDPs offer the potential to assist project navigation,
-            acting as a framework for code examples and step-by-step
-            tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
+        -   [GDPs and their grouping as a collection or menu of
+            suggested options, offer the potential to assist project
+            navigation, acting as a framework for code examples and
+            step-by-step
+            tutorials](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
         -   [GDPs used to scaffold ideation
             processes](#gdps-used-to-scaffold-ideation-processes)
             -   [Knowledge of game design patterns used to stimulate and
@@ -368,9 +369,11 @@ The parent struggles to implement quite ambitious code challenges that she takes
 
 
 
-## Cultural Dimension
+## Use of GDPs in the cultural plane / community level of activity
 
+This level of plane of activity corresponds to AT diagram 5.x / 4.x - group level. From Rogoff it examines community norms and repertoires. From Cole's work, we can frame this section as observations of GDPs role in the emerging idioculture of the game making sessions.   
 
+While other community interactions existed (introductions, warm up games)
 The role of playtesting a medium for an idioculture to emerge became a significant part of the pedagogy. The following section explore how this happened in relation to the use of GDPs in varied ways.  x,y,z
 
 ### The role of GDPs to facilitate learners to design for others
@@ -671,11 +674,11 @@ This section examines the use of GDPs to facilitate guided participation via int
 . -->
 
 
-### GDPs and their grouping as a collection or menu of suggested options, offer the potential to assist project navigation, acting as a framework for code examples and step-by-step tutorials 
+### GDPs and their grouping as a collection or menu of suggested options, offer the potential to assist project navigation, acting as a framework for code examples and step-by-step tutorials
 
 <!-- DRAW ON CHAPTER 4 MUTUAL EVOLUTION - AND FIND EXAMPLES . -->
 
-**The use of a catalogue of design patterns addresses a tension of participants choice and the need for documentation to support the technical implementation of code structures. However, not all participants used provided instructions and develop diverse ways to implement patterns.**
+**The use of a catalogue of design patterns addresses a tension of participants choice and the need for documentation to support the technical implementation of code structures. However, not all participants used provided instructions and develop diverse ways to access support to implement patterns.**
 
 <!-- - RECAP DOCUMENTATION TENSIONS HERE WITH FOCUS ON AGENCY
 - ALSO FOCUS ON MY ROLE AS A DESIGNER INTRODUCING DOCUMENTATION AND STRATEGIES (PERHAPS MAPS TOO IN LINE WITH 5TH D) -->
@@ -692,17 +695,14 @@ The vignette in this chapter shows the parent Suzanna's use of a step by step tu
 
 By way of contrast, Vignette.toby showed the child shares an independent style with Suzanna but engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
 
-
-DATA CALL HERE - Examples from the data of participants using GDPs as a framework for organisation and project navigations.
+OTHER DATA CALL HERE - Examples from the data of participants using GDPs as a framework for organisation and project navigations.
 
 <!-- The previous chapter also described the use of starting activities which selected key changes to code or simplified design processes designed to maximise personalisation and changes to the starting game template. -->
 
-These varied forms of documentation, and their varied adoption and propagation
-represent different  approaches to  scaffolding  the process of becoming familiar with and then modifying to the code in often increasingly ambitious ways inline with the stages and ethos of a use-modify-create (UMC) approach. [source]
+These varied forms of documentation, and their varied adoption and propagation represent different approaches to  scaffolding the process of becoming familiar with and then modifying to the code in often increasingly ambitious ways inline with the stages and ethos of a use-modify-create (UMC) approach. [source]
 
 
 <!-- NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE? -->
-
 
 
 Key characteristics of structuring support around quick start activities and a subsequent menu of GDPs which align with existing research include:
@@ -1362,11 +1362,7 @@ _Decomposition_: example of parents helping children break a larger problems int
 _Generalisation / pattern recognition_ is present in the majority of participants as patterns are readily available to participants in starting code and the extra patches that are added. The process is repeated.
 _Sequencing / algorithms_ are frequently explored in the resolution of errors with participants. In one interaction with Sh, exploring how a bracket placed in the wrong place can effectively break the game yielded a productive discussion on the importance of correct code sequencing (PERHAPS INCLUDE AS APPENDIX?). _Abstraction_, identified by Wing as the most vital CT concept, merits a deeper examination and is covered in a later section of this chapter. -->
 
-
-
 <!-- Beyond this broad mapping of systems and computing concepts to aid facilitators to highlight I also sketched out metacognitive activities to explore these concepts on completion of each GDP. As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show an ongoing reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. -->
-
-
 
 <!-- My intuitive reluctance to impose shifts in the scope of activity systems, can be interpreted through the lens of TADS. For me to prompt a shift to a  activities to reinforce recognitions and connection of learner generated code to computing and systems concepts, would impose a objective (first stimulus) and expose a new set of secondary stimuli for learners to draw on.
 THIS SECTION NEEDS DEVELOPMENT AND COMPLEXIFICATION IN RELATION TO EXISTING RESEARCH. -->
@@ -1399,7 +1395,8 @@ In terms of a research process, this maps in part to the inductive process of th
 From the perspective of participants and facilitators, the process can be transferred to other design projects
 
     There are two types of abstractions: empirical and theoretical. Empirical abstraction
-    is a classification of superficial features of phenomena. Theoretical abstraction refers to the identification of the genetic origins of phenomena that may externally be not alike at all. A theoretical abstraction is based on a functional relationship, also called a germ cell.  While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction. Theoretical abstraction allows one to generate and project complex, theoretically mastered concrete manifestations and developmental forms of the reality under scrutinyTitle: Activity theory as an activist and interventionist theory, Author: Sannino, Date: 10/2011
+    is a classification of superficial features of phenomena. Theoretical abstraction refers to the identification of the genetic origins of phenomena that may externally be not alike at all. A theoretical abstraction is based on a functional relationship, also called a germ cell.  While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction. Theoretical abstraction allows one to generate and project complex, theoretically mastered concrete manifestations and developmental forms of the reality under scrutiny
+    Title: Activity theory as an activist and interventionist theory, Author: Sannino, Date: 10/2011
 
 
 
