--- a/_posts/thesis_chapters/tocs/2024-11-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-11-6-Gdps.md_toc.md
@@ -11,21 +11,22 @@
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
         -   [GDP concepts and language used in informal feedback for
             peers to influence modification of games (developing
-            community
-            norms)](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms)
-        -   [The propagation of use of GDPs - (through playtesting() IS
-            IT PLAYTESTING THAT IS IMPORTANT HERE - OR THE ROLE AND
-            NATURE OF GDPS TO AID
-            PROPAGATION](#the-propagation-of-use-of-gdps---through-playtesting-is-it-playtesting-that-is-important-here---or-the-role-and-nature-of-gdps-to-aid-propagation)
+            community norms) - MERGE WITH
+            BELOW?](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms---merge-with-below)
+        -   [Evolution and propagation of GDPs concepts during
+            playtesting - MERGE WITH
+            ABOVE?](#evolution-and-propagation-of-gdps-concepts-during-playtesting---merge-with-above)
         -   [GDPs facilitate the use of wider funds of knowledge /
             interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
         -   [Perhaps add here a summary of cultural section if
             useful](#perhaps-add-here-a-summary-of-cultural-section-if-useful)
     -   [GDPs used in the process of guided
         participation](#gdps-used-in-the-process-of-guided-participation)
-        -   [GDPs offer the potential to assist project navigation,
-            acting as a framework for code examples and step-by-step
-            tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
+        -   [GDPs and their grouping as a collection or menu of
+            suggested options, offer the potential to assist project
+            navigation, acting as a framework for code examples and
+            step-by-step
+            tutorials](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
         -   [GDPs used to scaffold ideation
             processes](#gdps-used-to-scaffold-ideation-processes)
             -   [Knowledge of game design patterns used to stimulate and
