Changes to cultural section

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -154,8 +154,6 @@ _Identifying GDPs as a germ cell/ unit of analysis_
 
 The last chapter explored the mutual evolution of the learning design, shaped by direct input, explicit requests and the implicit needs of the community and resulting feedback.
 
-
-
 The leading activity of iteratively of altering a game at the level of gameplay design pattern which emerged from this experimental process.
 
 This chapter develops analysis of the role of GDPs as a mediational strategies in varied forms including;  supporting resources, provided support processes and naturally emerging practices.
@@ -373,13 +371,12 @@ The parent struggles to implement quite ambitious code challenges that she takes
 
 This level of plane of activity corresponds to AT diagram 5.x / 4.x - group level. From Rogoff it examines community norms and repertoires. From Cole's work, we can frame this section as observations of GDPs role in the emerging idioculture of the game making sessions.   
 
-While other community interactions existed (introductions, warm up games)
-The role of playtesting a medium for an idioculture to emerge became a significant part of the pedagogy. The following section explore how this happened in relation to the use of GDPs in varied ways.  x,y,z
+While other community interactions existed (introductions, warm up games), playtesting a medium for an idioculture to emerge became a significant part of the pedagogy. The following section explore how this happened in relation to the use of GDPs in varied ways.  x,y,z
+
 
 ### The role of GDPs to facilitate learners to design for others
 
 <!-- NOTE - ALSO LINKED TO IDEATION? - is this guided participation? -->
-
 
 
 **The use of GDPs (especially during playtesting) can aid the process of imagining the end user experiences**
@@ -458,16 +455,32 @@ There are different levels of designing for others
 One is just to make a playable game experience which by design involves an imagined user experience in the abstract. The example above shows a more playful and direct imagining of the experience of other people in the room a more tangible motivation with a more immediate reward.
 
 
-### GDP concepts and language used in informal feedback for peers to influence modification of games (developing community norms) - MERGE WITH BELOW?
+#### GDP concepts and language used in informal feedback for peers to influence modification of games (developing community norms) -
 
-**The concepts of game challenge and game feel evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
-
-In Chapter 5 norming behaviour was identified as an emerging characteristic of playtesting in this setting. This section shares evidence of how GDPs help this process.
-
-The discussion of game challenge, specifically comment about how 'hard' participant games were as the most common interaction during playtesting.
+**Concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
 
 
-The concept of difficulty for most of the participant's games was dependent on the interaction between the feel of the game controls and elements of game challenge associated with placement of hazards and moving enemies. In this design the jump mechanic is determined by the use of variables controlling gravity, jump velocity and movement velocity.
+REALLY TRIM THIS DOWN
+The discussion of game challenge, specifically comment about how 'hard' participant games were as the most common interaction
+
+
+during playtesting. The concept of difficulty for most of the participant's games was dependent on the interaction between the feel of the game controls and elements of game challenge associated with placement of hazards and moving enemies.
+
+Vignette.challenge outlines an key interaction which demonstrates norming behaviour towards Molly who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating.
+
+<!-- children come and play Molly's game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating."  -->
+The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating.
+
+In interactions we can see a similar message coming from peers in the playtesting process. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of jump feel stemming from the personal experiences of the participants and from tangible feeling of lack of control over the player's character in the game.
+
+These norming behaviours some of the informal norming behaviours that are less directive seen in the work of Rogoff and colleagues as explored in literature review [@rogoff_cultural_2003].
+
+
+
+---
+
+MOVE TO AN APPENDIX
+In this design the jump mechanic is determined by the use of variables controlling gravity, jump velocity and movement velocity.
 
 Parent Molly had been focused mostly on completing asset design. The only changes she had made to the deliberately frustrating initial player movement (discussed in design chapter) was to change player jump velocity. Player jump (y) velocity was set very high but left right (x) velocity was slow. This created a very frustrating game feel.
 
@@ -489,7 +502,8 @@ She had been made aware by her daughter Ne about the relevant game variables. In
     Ed: Your jump speed is massive.
 
 
-Other children come and play the game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating." In interactions we can see a similar message coming from peers in the playtesting process. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of jump feel stemming from the personal experiences of the participants and from tangible feeling of lack of control over the player's character in the game.
+Other children come and play Molly's game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating."  
+
 
 <!-- This form of interaction can be analysed using the professional framework called MDA. The Mechanic dimension here is the jump game mechanic, D is the ?, and A is the frustration experienced by fellow testers. Further parallels with MDA are explored later. -->
 
@@ -504,7 +518,7 @@ Other children come and play the game but only for less than a minute before lea
 
 <!-- The importance of these variables to is was behind the design decision to place these variable right at the top of the code and to rename them with player centric names rather than mathematical terms like velocity and acceleration.   -->
 
-<!-- NOTE - BE SURE TO EXPLORE THIS IN SOME DETAIL IN DESIGN CHAPTER -->
+<!-- NOTE - BE SURE TO EXPLORE THIS IN SOME DETAIL IN DESIGN CHAPTER -->improve
 
 <!-- The regular playtesting of games allowed participants to give each other feedback regularly and game feel was one of the aspects that young people in particular to gave frequent feedback on. -->
 
@@ -517,9 +531,9 @@ Player jump (y) velocity was set very high but left right (x) velocity was slow.
 
     Molly:  (Talking to self) No! It's so hard that. (referring to a particular jump in her game.)
     Mick: How are you getting on Mi? It's looking good.
-    Mick: (Noting frustrated air of Mi) Have you made it to hard.
+    Mick: (Noting frustrated air of Mi) Have you made it too hard?
     Molly:  I don't know. Can you jump from here to here with this.. this.. him? (point to main character)
-    Mick: So it look like you bump your head and fall down.
+    Mick: So it looks like you bump your head and fall down.
     Mick: One bit of friendly feedback that I would give you is that it's taking a long time to move left and right. And that is something that you can change if you want to.
     Molly:  Oh right yeah.direct
     Mick: Yeah.
@@ -533,15 +547,16 @@ Player jump (y) velocity was set very high but left right (x) velocity was slow.
 <!-- These norming behaviours some of the informal norming behaviours that are less directive seen in the work of Rogoff and colleagues as explored in literature review [@rogoff_cultural_2003]. -->
 
 
-### Evolution and propagation of GDPs concepts during playtesting - MERGE WITH ABOVE?
+### Evolution and propagation of GDPs concepts during playtesting
 
 <!-- NOTE NOT PLAYTESTING THAT IS IMPORTANT HERE - INSTEAD THE ROLE AND NATURE OF GDPS TO AID PROPAGATION -->
 <!-- NOTE THIS includes NON TEMPLATED GDPs? -->
 
 **The implementation of particular GDPs by participant pairs or individuals often spread through peer activity.**
 
-In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also  and used to request help.  
+GDPs acted as memes and spread during playtesting in a way which enriched the idioculture and the games of participants.
 
+In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also   used GDP concepts to request help of peers to implement GDPs in their own games.
 
 For example, the work of the child to add 21 levels to their own game served as a way to publicise this possibility. The process was also spread by that child's willingness to help others to add that feature to their game. This shifted dependence on myself as a facilitator, or on the instruction-based support documents. This excerpt shows this more experience child coder Toby, agreeing to show another child Bertie  how to add new levels.
 
@@ -552,20 +567,20 @@ For example, the work of the child to add 21 levels to their own game served as 
     Pause
     Toby: I’m just going to have one go of beating this (refering to his own game which he is playtesing). It’s 21 levels in it. So .. Yeeeeah.
     Pause
-    Bertie: It’s like parkours in Minecraft but times. It’s like playing the game Wipeout. Have you ever played Wipeout?
+    Bertie: It’s like parkours in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?
     Toby: Er not really.
     Bertie: Or seen it?
     Bertie: That’s like my second level.
-    Toby: Ah so hard (Tobyfails at a high level on his game and starts to move off)
+    Toby: Ah so hard (Toby fails at a high level on his game and starts to move off)
     Toby: (To someone else  calling for attention)  No I’m helping Bertie.
     _(Toby then follows Bertie to his workstation to help him implement more levels.)_
 
 When Toby moves to Bertie's game he playtests it and then looks at the code. He notes that Bertie has added a variable for a fourth level but then goes on to demonstrate to to add an array representing the next level, and a conditional statement to select level 4 when level 3 is completed. At Toby uses the keyboard completes this work, Bertie reads aloud the code which is being typed in by Toby.
 
-Exchanges like this allow the propagation of GDPs. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is very likely that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to do the same. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
-ANY EVIDENCE?
+Exchanges like this show the propagation of GDPs in ways other than documentation or facilitator support. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is possible that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to ask him to do the same. Toby has become a specialist that the community can draw on [see similar research]. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
+ADD MORE EVIDENCE?
 
-The propagation in the example above is completed entirely through peer activity rather than instruction or supporting resources. A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence.
+<!-- A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. -->
 
 ADD IN FREQUENCY IF POSSIBLE - A ROUGH APPROXIMATION OF WORKING PATTERNS IN P2.
 eg.
@@ -574,7 +589,7 @@ Analysis of the working patterns stream of the coding schema shows 4 working uni
 
 **New GDPs emerged from existing patterns through peer activity during playtesting**
 
-In addition to the propagation of main game design patterns, sub patterns and related design concepts emerged organically from the community. The concept of safe zone in the game of Pearl and Clive arrived as a direct result of after adding a moving enemies GDP, the extensive use of that pattern dominates the game challenge to such an extent that it is essential for players to quickly identify and use 'safe zones'.
+In addition to the propagation of GDPs offered n the menu of supporting documentation, other gameplay patterns and related design concepts emerged organically from the community. For example, the concept of safe zone in the game of Pearl and Clive arrived as a direct result of after adding a moving enemies GDP, the extensive use of that pattern dominates the game challenge to such an extent that it is essential for players to quickly identify and use 'safe zones'.
 DEVELOP
 
 These new patterns or elements of patterns sometime introduced new concepts and associated language into the community. When participants noticed the elements and used the relevant terminology, they are engaging in what Wegner terms legitimate peripheral participation.
@@ -598,23 +613,15 @@ While Ed has only just been introduced to the ability to "cramp". He is happy an
 
 **GDPs allow participants to share and explore their home and professional funds of knowledge and practices in the emerging learning community.**
 
-In the last chapter outlined ways in which participants could to create their own graphical and audio assets and situated this process as a aligning with Cole's conception of surfacing funds of interest.
+The premise driving my exploration in this area (in particular the decision to structure pedagogy around GDPs) is that the tacit knowledge of games of most family members is extensive even if they are not avid gamers due to the pervasive influence of casual games into most extended families [Be sure to explore further and put in intro].
 
-This process facilitated participants to bring their home and digital life interests into the game making process, a rich cultural source [Livingstone]. As outlined in literature [Gee / Ito & Scratch community] , graphical assets along with  via the use of the creation of game narratives), are motivating and sustain engagement.
+In the last chapter outlined ways in which participants could to create their own graphical and audio assets and situated this process as a aligning with Cole's conception of surfacing funds of interest. This process facilitated participants to bring their home and digital life interests into the game making process, a rich cultural source [Livingstone]. As outlined in literature [Gee / Ito & Scratch community] , graphical assets along with  via the use of the creation of game narratives), are motivating and sustain engagement.
 
-The process has parallels in enthusiast communities. For example, in new grounds, itch.io, Scratch communities, and specialist game art sites, the sharing of graphic
-
-Observations from video data in this study supports existing research on FoI as
-
-HERE OR IN DISCUSSION LATER ? OR NEXT CHAPTER.
-This has parallels with / can be considered an inclusive educational practice and offer a rich description of a concrete example which aims to align to inclusive, practice-based frameworks like UDL and PBL.
-
-_Funds of knowledge in games asset creation_
+In addition to issues of aesthetics, and understandings of game challenge or mechanics explored in the section above, knowledge of key knowledge of game mechanics emerged as part of  productive cultural repertoires.
 
 
-In some of the examples above we saw Molly and Nadine showing identification with graphical making process and the process of bringing it the game.  
-Beyond there internal family interaction, they share this artistic flair or attention to detail which is likely to be a part of their home funds of knowledge into the emerging learning community.
-CAN THIS BE LINKED TO FORMING IDENTITY WITHING THE COMMUNITY VIA A SPECIALISM? THERE IS DATA FROM AN INTERVIEW TO SUPPORT THIS.
+<!-- The process has parallels in enthusiast communities. For example, in new grounds, itch.io, Scratch communities, and specialist game art sites, the sharing of graphic -->
+
 
 _Funds of knowledge from home game playing experience_
 
@@ -623,15 +630,26 @@ In the above example, Bertie comments on Toby's game which has a dominant game e
 LINK TO STATS from coding.
 
 
+_Funds of knowledge in games asset creation_ COMPRESS? OR LINK SPECIFICALLY TO GDPS
+
+
+In some of the examples above we saw Molly and Nadine showing identification with graphical making process and the process of bringing it the game.  
+Beyond there internal family interaction, they share this artistic flair or attention to detail which is likely to be a part of their home funds of knowledge into the emerging learning community.
+CAN THIS BE LINKED TO FORMING IDENTITY WITHING THE COMMUNITY VIA A SPECIALISM? THERE IS DATA FROM AN INTERVIEW TO SUPPORT THIS.
+
 A wider exploration of use of FOK in the programme related to art and narrative is explored in chapter six.
 
 
-_Funds of knowledge from professional communities_
+<!-- _Funds of knowledge from professional communities_
 
+DROP? MENTION IF USEFUL
 A potential similar specialism was evident from Dave's guidance of Toby to access professional documentation, and engage in debugging processes using the developer tools section of the web browser. (See appendix 5.x). As a facilitator, this aligned with my previous work with Mozilla web clubs. The enthusiastic sharing of for messing around with technical web tools for learning and fun.
 
-This could have been picked up on and integrated into the design. While I did not do this, the confidence brought to the process to find resources from outside of teh walled garden of the provided resources prompted a change of game paradigm for another family who also made a top down / maze game in P3.
+This could have been picked up on and integrated into the design. While I did not do this, the confidence brought to the process to find resources from outside of teh walled garden of the provided resources prompted a change of game paradigm for another family who also made a top down / maze game in P3. -->
 
+
+_Summary_
+Observations from video data in this study supports existing research on FoI as motivating and inclusive.
 
 
 
@@ -641,24 +659,24 @@ ADD IF RELEVANT - research on funds of knowledge motives or benefits of this beh
 <!--
 Article on intangibility of game feel.
  https://www.gamedeveloper.com/design/game-feel-the-secret-ingredient -->
-<!-- #### Use of hazards and moving enemies - The placement of hazards as design pattern to increase challenge -->
-<!-- GDPs and play-testing interact to allow participants,  to support each other and build community in a diversity of ways. -->
+
 
 ### Perhaps  add here a summary of cultural section if useful
 
-- FoK
-- affordances
-- shared language
-- idioculture
-- link to next chapter
+The link to home interests and funds of knowledge is demonstrated in varied ways which enrich the development of a community idioculture which is inclusive and productive in terms of the practicalities of learning how to make games.
 
-The distinction between cultural and guided activity is blurred but here the role of playtesting as a medium for cultural exchange and a ground in which culture grows in of note.
+The work of Rogoff and Wegner and Lave has guided the surfacing activity in the  such as legitimate peripheral participation, community norming and taking on roles of specialism.  
 
-What would Rogoff and Wegner and Lave find interesting here?
-Is the term idioculture helpful to summarise the observation in this section.
+<!-- At times, the distinction between cultural and guided activity is blurred but here the role of playtesting as a medium for cultural exchange and a ground in which culture grows in of note. -->
+
+The varied use of the collection and individuals gameplay patterns and concepts, can be examined using the lense of the MDA framework.  
+- Home knowledge of mechanics drove many of the requests for GDPs from popular medium of retro games  
+- The norming practices often focus on the game feel, which relates most directly to the dynamics lens.  
+- Aesthetics and the end user experience motivated some users greatly, while it is not clear if this game code changes in this dimentions fully constitue a gameplay design pattern, they are an important inclusive element of the design.
+
 
 The cultural aspects of the learning community are further explored in Chapter 7.
-Is there something that merits mentioning here as a link?
+Is there something that merits mentioning here as a link withing Ch.7?
 
 
 ## GDPs used in the process of guided participation
@@ -710,6 +728,8 @@ Key characteristics of structuring support around quick start activities and a s
 - supporting the value of informal approaches to learning technology [ITO etc] whilst avoiding the lack of support in P1 where participants called out for more support with technical and organisational processes.
 - providing shorter, just-in-time tutorials
 to reduce barriers associated with more extensive instruction-based approaches including barriers of literacy [@dietz_design_2021; @resnick_coding_2020].
+- The use of a menu / collection of resources can be considered an inclusive educational practice and offer a rich description of a concrete example which aims to align to inclusive, practice-based frameworks like UDL and PBL. While this may involve more work in advance, the benefits to inclusive practice merit it.
+
 
 
 <!--
