--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -477,74 +477,7 @@ These norming behaviours some of the informal norming behaviours that are less d
 
 
 
----
-
-MOVE TO AN APPENDIX
-In this design the jump mechanic is determined by the use of variables controlling gravity, jump velocity and movement velocity.
-
-Parent Molly had been focused mostly on completing asset design. The only changes she had made to the deliberately frustrating initial player movement (discussed in design chapter) was to change player jump velocity. Player jump (y) velocity was set very high but left right (x) velocity was slow. This created a very frustrating game feel.
-
-She had been made aware by her daughter Ne about the relevant game variables. In response, Molly asked for advice but Ne gave none walking away. Molly noted "She's left me to my own devices."
-
-    Bertie: That looks nice (referring to the graphical look of the game)
-
-    Molly invites Bertie to play as she can't progress due to the difficult game controls.
-
-    Bertie: It jumps super high but so slow  
-    Pause
-    Molly: He has to go slow be  cause he's an astronaut, you see.    
-    Bertie: It's hard.
-    Bertie leaves.
-    Molly: (to peer parent with serious tone.) It's hard. Wow.
-
-    Ed comes to play the game.
-    Ed: How much jump speed to you have?
-    Ed: Your jump speed is massive.
-
-
-Other children come and play Molly's game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating."  
-
-
-<!-- This form of interaction can be analysed using the professional framework called MDA. The Mechanic dimension here is the jump game mechanic, D is the ?, and A is the frustration experienced by fellow testers. Further parallels with MDA are explored later. -->
-
-
-<!-- We can see that Molly justifies the game feel of a very high fast jump with a narrative response about the character being spaceman. However, the limited amount of time anyone plays her game and her own frustration in playing it is telling. The game feel is frustrating in the wrong way here. Molly seems to initially misconstrue the feedback she is getting here equating her ability to make the game hard as a positive thing. However, towards the end she notes the frustrating nature of the game. -->
-
-
-<!-- The same message is delivered in a variety of ways, above we can see feedback from Mick trying to bridge a technical and conversational approach, direct feedback of the personal challenge level and an interpretation of the cause from Bertie and then a more specifically technical explanation involving the naming of the variable _jump speed_. -->
-
-
-<!-- The concept of difficulty for most of the participant's games was dependent on the interaction between the feel of the game controls and elements of game challenge associated with placement of hazards and moving enemies. The term _game feel_  has varied interpretation but is generally framed as the responsiveness and feeling of control over the main character during the core movement of the game. In this case, it effects the ability of players to move between platforms and avoid enemies. In this design the jump mechanic is determined by the use of variables controlling gravity, jump velocity and movement velocity. -->
-
-<!-- The importance of these variables to is was behind the design decision to place these variable right at the top of the code and to rename them with player centric names rather than mathematical terms like velocity and acceleration.   -->
-
-<!-- NOTE - BE SURE TO EXPLORE THIS IN SOME DETAIL IN DESIGN CHAPTER -->improve
-
-<!-- The regular playtesting of games allowed participants to give each other feedback regularly and game feel was one of the aspects that young people in particular to gave frequent feedback on. -->
-
-<!-- Parent Molly had been focused mostly on completing asset design. She had been made aware by her daughter Ne about the relevant game variables. -->
-
-
-<!-- In response, Molly asked for advice but Ne gave none walking away. Molly noted "She's left me to my own devices."
-
-Player jump (y) velocity was set very high but left right (x) velocity was slow. This created a very frustrating game feel. The following is a compilation of feedback comments or reactions over a 15 minute time period.   
-
-    Molly:  (Talking to self) No! It's so hard that. (referring to a particular jump in her game.)
-    Mick: How are you getting on Mi? It's looking good.
-    Mick: (Noting frustrated air of Mi) Have you made it too hard?
-    Molly:  I don't know. Can you jump from here to here with this.. this.. him? (point to main character)
-    Mick: So it looks like you bump your head and fall down.
-    Mick: One bit of friendly feedback that I would give you is that it's taking a long time to move left and right. And that is something that you can change if you want to.
-    Molly:  Oh right yeah.direct
-    Mick: Yeah.
-    Molly:  Yeah, actually that's a good idea.
-    Mick: If you think about average games. Your average jump time would be about one second in the air. So that can be a bit of guide sometimes.   -->
-
-
-<!-- As a facilitator, I shared feedback about the frustratingly slow movement time and an indirect feedback on the high velocity jump value. I use quite indirect language when giving feedback and while I reference Mi's frustration rather than giving direct feedback. -->
-
-
-<!-- These norming behaviours some of the informal norming behaviours that are less directive seen in the work of Rogoff and colleagues as explored in literature review [@rogoff_cultural_2003]. -->
+MOVED Molly's challenge feedback TO AN APPENDIX
 
 
 ### Evolution and propagation of GDPs concepts during playtesting
